objects/ASI_eForm_Approval_Routing__c.object
<CustomObject>
    <description>For ASI_eForm_KR</description>
    <fields>
        <fullName>ASI_eForm_Approver_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approver_Option_Storages1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Approver_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approver_Option_Storages2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Approver_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approver_Option_Storages3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Branch_Code__c</fullName>
        <label>Branch Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>300-Management</fullName>
                </value>
                <value>
                    <fullName>302-Management</fullName>
                </value>
                <value>
                    <fullName>311-Finance</fullName>
                </value>
                <value>
                    <fullName>312-Credit Management</fullName>
                </value>
                <value>
                    <fullName>313-Purchasing</fullName>
                </value>
                <value>
                    <fullName>314-IT</fullName>
                </value>
                <value>
                    <fullName>315-Logistics</fullName>
                </value>
                <value>
                    <fullName>321-HR</fullName>
                </value>
                <value>
                    <fullName>322-HR</fullName>
                </value>
                <value>
                    <fullName>323-HR</fullName>
                </value>
                <value>
                    <fullName>340-External Affairs</fullName>
                </value>
                <value>
                    <fullName>341-Legal Affairs</fullName>
                </value>
                <value>
                    <fullName>360-Marketing</fullName>
                </value>
                <value>
                    <fullName>361-Marketing - PR</fullName>
                </value>
                <value>
                    <fullName>411-Factory Engineering&amp;Production</fullName>
                </value>
                <value>
                    <fullName>412-Factory QC</fullName>
                </value>
                <value>
                    <fullName>413-Factory Administration</fullName>
                </value>
                <value>
                    <fullName>414-Factory Engineering</fullName>
                </value>
                <value>
                    <fullName>500-National Sales Director</fullName>
                </value>
                <value>
                    <fullName>502-Trade MKT Dir.</fullName>
                </value>
                <value>
                    <fullName>503-Core Metro Pull RSD</fullName>
                </value>
                <value>
                    <fullName>504-OFF Trade CSD</fullName>
                </value>
                <value>
                    <fullName>505-Metro WS RSD</fullName>
                </value>
                <value>
                    <fullName>506-Youngnam RSD</fullName>
                </value>
                <value>
                    <fullName>507-Central RSD</fullName>
                </value>
                <value>
                    <fullName>508-Trade Marketing</fullName>
                </value>
                <value>
                    <fullName>512-Seoul WS</fullName>
                </value>
                <value>
                    <fullName>513-Local TOT</fullName>
                </value>
                <value>
                    <fullName>514-Outer Metro Pull RSD</fullName>
                </value>
                <value>
                    <fullName>515-Inter TOT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_eForm_Form_Type__c</fullName>
        <label>Form Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Recruitment Request</fullName>
                </value>
                <value>
                    <fullName>Leave Request</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_eForm_MC_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MC Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approver_Option_Storages</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Eform Approval Routing</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_eForm_Form_Type__c</columns>
        <columns>ASI_eForm_Branch_Code__c</columns>
        <columns>ASI_eForm_Approver_1__c</columns>
        <columns>ASI_eForm_Approver_2__c</columns>
        <columns>ASI_eForm_MC_Approver__c</columns>
        <columns>ASI_eForm_Approver_3__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Recruitment_Request</fullName>
        <columns>NAME</columns>
        <columns>ASI_eForm_Form_Type__c</columns>
        <columns>ASI_eForm_Branch_Code__c</columns>
        <columns>ASI_eForm_Approver_1__c</columns>
        <columns>ASI_eForm_MC_Approver__c</columns>
        <columns>ASI_eForm_Approver_2__c</columns>
        <columns>ASI_eForm_Approver_3__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_eForm_Form_Type__c</field>
            <operation>equals</operation>
            <value>Recruitment Request</value>
        </filters>
        <label>All_Recruitment Request</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>Opt-{000000}</displayFormat>
        <label>Routing ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Eform Approval Routings</pluralLabel>
    <recordTypes>
        <fullName>ASI_eForm_KR_ApproverOption</fullName>
        <active>true</active>
        <label>ASI_eForm_KR_ApproverOption</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>